extract classpath module